feat: add API for get highlight by streamerID
