# docs/swagger.yaml
@@ -220,6 +220,8 @@ definitions:
         type: string
       streamID:
         type: string
+      username:
+        type: string
     type: object
 info:
   contact:
@@ -294,6 +296,45 @@ paths:
       summary: Get all categories
       tags:
       - Category
+  /highlight/by-streamer-id:
+    get:
+      consumes:
+      - application/json
+      description: Get Highlight by StreamerID
+      parameters:
+      - description: Streamer ID
+        in: query
+        name: streamerID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dtos.CreateHighlightResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "409":
+          description: Conflict
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get Highlight by StreamerID
+      tags:
+      - Video Highlight
   /highlight/create:
     post:
       consumes:
